# apps_shell

./: .licenserc.yaml  BUILD.gn  app.conf
.github/workflows/: cross_repos_build.yml
src/: main.rs
src/commands/: alloc.rs  cat.rs  cd.rs  cmp.rs  cp.rs  dealloc.rs  echo.rs  free.rs  help.rs  ls.rs  mkdir.rs  mod.rs  mount.rs  printf.rs  ps.rs  pwd.rs  rmdir.rs  touch.rs  trace.rs  truncate.rs  umount.rs
