# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust.gni")
import("//build/toolchain/blueos.gni")

executable("shell") {
  crate_name = "shell"
  crate_type = "bin"
  sources = [ "src/main.rs" ]
  deps = [
    "//external/vendor/phf-0.12.1:phf",
    "//kernel/rsrt:rsrt_std",
    "//librs",
  ]
  configs += [ "//build/boards/${board}:kernel_config" ]
}

gen_qemu_runner("shell_runner") {
  img = ":shell"
  qemu = "$qemu_exe"
  machine = "$machine"
  qemu_args = qemu_extra_args
  net_args = qemu_net_args
  block_img = "shell_block.img"
  block_args = qemu_block_args
}
